1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

1999-07-26  Tom Yu  <tlyu@mit.edu>

	* telnet.c (telnet): Fix typo in error message, via
	schwim@whatmore.Stanford.EDU

1999-04-13    <tytso@rsts-11.mit.edu>

	* configure.in: Check for setupterm() in libncurses in addition to
		libcurses.  (Will be needed for Linux/Redhat 6.0)

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-10-26  Marc Horowitz  <marc@mit.edu>

	* commands.c: remove calls to setuid(getuid()).  This looks like
	it was once an attempt to make it safe to run setuid, but it's not
	safe for a number of other reasons, so there's no reason to
	pretend.

Sat Oct 10 06:24:55 1998  Geoffrey King  <gjking@mit.edu>

	* telnet.c (telnet): Cosmetic change: Put a newline after "Waiting
 	for encryption to be negotiated..." so that the response
	"[ Kerberos V5 accepts you as ``gjking@ATHENA.MIT.EDU'' ]" doesn't
 	run off the end of the line.

Mon Aug 17 04:32:08 1998  Geoffrey King  <gjking@mit.edu>

	* main.c (main): Declare dst_realm_sz as extern int instead of
 	extern char, to agree with its definition in libtelnet/kerberos.c.
	This was causing dst_realm_sz to be zero unexpectedly, and so
	strncpy was not copying the -k realm argument into dest_realm.
	[krb5-appl/616]
	
Tue May 26 15:27:55 1998  Tom Yu  <tlyu@mit.edu>

	* configure.in: Re-order check for setupterm to avoid lossage if
	setupterm is defined in libtermcap or libcurses.

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* main.c (main): POSIX states that getopt returns -1 when it
		is done parsing options, not EOF.

	* configure.in: Use standard autoconf test names. Change tests